add fix api getAllService,getServiceByName and add api get workerOfService